<resources>
    <string name="app_name">HushUp</string>
    <string name="add_new_location">Add new location</string>
    <string name="location_list">Locations</string>
    <string name="need_location_permission_message">You need to enable location permissions first</string>
    <string name="location_permissions_granted_message">Location Permissions Granted</string>
    <string name="setting_enabled" translatable="false">Enabled Setting</string>
    <string name="settings_label">Settings</string>
    <string name="location_permissions">Location Permissions</string>
    <string name="enable_geofences">Enable Geofences</string>
    <string name="privacy">http://www.google.com/policies/privacy</string>
    <string name="ringer_permissions">Ringer Permissions</string>
    <string name="silent_mode_activated">Silent mode activated</string>
    <string name="touch_to_relaunch">Touch to launch the app.</string>
    <string name="back_to_normal">Back to normal</string>
    <string name="intro">Hush Up uses Geofences from GoogleApi to detect whether you enter your zone and your phone will be turned into silent mode</string>
    <string name="privacy_guarantee"> You DO NOT have to worry about your privacy since the Geofences are handled by Google</string>
    <string name="privacy_label">Privacy</string>
    <string name="swipe_to_delete">You can swipe to delete unwanted locations</string>
    <string name="help">Help</string>
</resources>
